src/test/ui/generator/resume-arg-late-bound.base.stderr
error: implementation of `Generator` is not general enough
  --> $DIR/resume-arg-late-bound.rs:19:5
   |
LL |     test(gen);
   |     ^^^^ implementation of `Generator` is not general enough
   |
   = note: `[generator@$DIR/resume-arg-late-bound.rs:15:15: 18:6]` must implement `Generator<&'1 mut bool>`, for any lifetime `'1`...
   = note: ...but it actually implements `Generator<&'2 mut bool>`, for some specific lifetime `'2`

error: implementation of `Generator` is not general enough
  --> $DIR/resume-arg-late-bound.rs:19:5
   |
LL |     test(gen);
   |     ^^^^ implementation of `Generator` is not general enough
   |
   = note: `[generator@$DIR/resume-arg-late-bound.rs:15:15: 18:6]` must implement `Generator<&'1 mut bool>`, for any lifetime `'1`...
   = note: ...but it actually implements `Generator<&'2 mut bool>`, for some specific lifetime `'2`

error: aborting due to 2 previous errors

